--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/index.ts"
+
   },
   "author": "Douglas Gonçalves",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.36",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.2"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
