--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "node ./",
     "build": "tsc -p .",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/index.ts"
-
   },
   "author": "Douglas Gonçalves",
   "license": "ISC",
@@ -19,6 +18,7 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "http-status-codes": "^2.2.0"
   }
 }
